description of the data

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e0d8d10",
+   "id": "1163326c",
    "metadata": {},
    "source": [
     "## Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a26bb1ea",
+   "id": "a26f4f1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c41205",
+   "id": "d2772895",
    "metadata": {},
    "source": [
     "## Data Preparations"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154de40e",
+   "id": "21c5b2ed",
    "metadata": {},
    "source": [
     "### 1. Load data files"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "47f17777",
+   "id": "224f1dfd",
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +66,84 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152c4201",
+   "id": "5460de6d",
    "metadata": {},
    "source": [
     "### 1.1 Describe the data"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d893516f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The train data has 60000 examples with shape (28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shape of train data\n",
+    "print('The train data has', X_train.shape[0], 'examples with shape', X_train.shape[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0bd34bb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test data has 10000 examples with shape (28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shape of test data\n",
+    "print('The test data has', X_test.shape[0], 'examples with shape', X_test.shape[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28b36170",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The label 0 represents a class that is T-shirt/top\n",
+      "The label 1 represents a class that is Trouser\n",
+      "The label 2 represents a class that is Pullover\n",
+      "The label 3 represents a class that is Dress\n",
+      "The label 4 represents a class that is Coat\n",
+      "The label 5 represents a class that is Sandal\n",
+      "The label 6 represents a class that is Shirt\n",
+      "The label 7 represents a class that is Sneaker\n",
+      "The label 8 represents a class that is Bag\n",
+      "The label 9 represents a class that is Ankle boot\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
+    "unique_labels = np.unique(y_train)\n",
+    "labels_dict = {classes_names[i]: unique_labels[i] for i in range(len(unique_labels))}\n",
+    "for class_name, label in labels_dict.items():\n",
+    "    print('The label', label, 'represents a class that is', class_name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f20e11c8",
+   "id": "8830297e",
    "metadata": {},
    "source": [
     "### 1.5 Draw some of the images"
@@ -82,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e748a28",
+   "id": "a4b4d478",
    "metadata": {},
    "source": [
     "### 2. Carry out required preprocessing operations on the data"
@@ -90,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfce9dc",
+   "id": "46c3d5b4",
    "metadata": {},
    "source": [
     "### 3. Encode the labels"
@@ -98,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7fed31",
+   "id": "0fc4c622",
    "metadata": {},
    "source": [
     "## Training a CNN neural network"
@@ -107,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f661749",
+   "id": "9acd4946",
    "metadata": {},
    "outputs": [],
    "source": []
