normalize the data

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45a33380",
+   "id": "c6874a67",
    "metadata": {},
    "source": [
     "## Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "908687b8",
+   "id": "b9a11e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "373b7941",
+   "id": "753dfbb4",
    "metadata": {},
    "source": [
     "## Data Preparations"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9d58b7",
+   "id": "6a4fa932",
    "metadata": {},
    "source": [
     "### 1. Load data files"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc9bde95",
+   "id": "ddd9135a",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5d3222",
+   "id": "c50a671c",
    "metadata": {},
    "source": [
     "### 1.1 Describe the data"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4d3d4036",
+   "id": "34a0db8e",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e141534d",
+   "id": "878cd7df",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5406418c",
+   "id": "92b07772",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dfe1e50",
+   "id": "51f051df",
    "metadata": {},
    "source": [
     "### 1.5 Draw some of the images"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fb594968",
+   "id": "cf250fa7",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01b93bc",
+   "id": "b807b639",
    "metadata": {},
    "source": [
     "### 2. Carry out required preprocessing operations on the data"
@@ -209,23 +209,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab927b04",
+   "execution_count": 50,
+   "id": "856b21a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# normalize train and test data\n",
+    "X_train = X_train / 255.0\n",
+    "X_test = X_test / 255.0"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "b2bb42c3",
+   "id": "f13acee6",
    "metadata": {},
    "source": [
     "### 3. Encode the labels"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53f7d56c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "67ba930c",
+   "id": "4af763b2",
    "metadata": {},
    "source": [
     "## Training a CNN neural network"
@@ -234,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526f19a8",
+   "id": "a7b43130",
    "metadata": {},
    "outputs": [],
    "source": []
