--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6874a67",
+   "id": "f8be6b68",
    "metadata": {},
    "source": [
     "## Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b9a11e94",
+   "id": "570346ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753dfbb4",
+   "id": "fde88339",
    "metadata": {},
    "source": [
     "## Data Preparations"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4fa932",
+   "id": "ef5dda87",
    "metadata": {},
    "source": [
     "### 1. Load data files"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ddd9135a",
+   "id": "13d6c464",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50a671c",
+   "id": "9f1d3f6c",
    "metadata": {},
    "source": [
     "### 1.1 Describe the data"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "34a0db8e",
+   "id": "f0f11aae",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "878cd7df",
+   "id": "57303f09",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92b07772",
+   "id": "4233139c",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f051df",
+   "id": "d5a8dfc9",
    "metadata": {},
    "source": [
     "### 1.5 Draw some of the images"
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cf250fa7",
+   "id": "74bc1e8d",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b807b639",
+   "id": "a9b6bbf4",
    "metadata": {},
    "source": [
     "### 2. Carry out required preprocessing operations on the data"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "856b21a0",
+   "id": "ba334602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13acee6",
+   "id": "f2f74f43",
    "metadata": {},
    "source": [
     "### 3. Encode the labels"
@@ -229,15 +229,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53f7d56c",
+   "execution_count": 52,
+   "id": "973e2753",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# encode train and test labels\n",
+    "y_train = pd.get_dummies(y_train)\n",
+    "y_test = pd.get_dummies(y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "4af763b2",
+   "id": "748f1935",
    "metadata": {},
    "source": [
     "## Training a CNN neural network"
@@ -246,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b43130",
+   "id": "5789f483",
    "metadata": {},
    "outputs": [],
    "source": []
