perform some edits

--- a/fashion_mnist.ipynb
+++ b/fashion_mnist.ipynb
@@ -1163,7 +1163,7 @@
       "cell_type": "code",
       "source": [
         "# Training of VGG19\n",
-        "vgg19.fit(x= X_train_vgg19,y= y_train_encoded, batch_size= 256, epochs= 25, validation_split= 0.1)"
+        "history = vgg19.fit(x= X_train_vgg19,y= y_train_encoded, batch_size= 256, epochs= 25, validation_split= 0.1)"
       ],
       "metadata": {
         "id": "JOxkmThr3W8l",
