add notebooks for training lenet-5 network

--- a/Notebooks/Utils.ipynb
+++ b/Notebooks/Utils.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
@@ -69,10 +70,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class TrainLogs():\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "\n",
+    "    # Plot Utility\n",
+    "    def train_curves(self, history, special_title):\n",
+    "        '''\n",
+    "        This function draws accuracy and loss curves for each epoch between train and validation data\n",
+    "        '''\n",
+    "        title_loss = 'Model loss per epoch ' + special_title\n",
+    "        title_accuracy = 'Model accuracy per epoch ' + special_title\n",
+    "        fig , axis = plt.subplots(nrows=1, ncols=2)\n",
+    "        # dimensions of figure\n",
+    "        fig.set_figheight(6)\n",
+    "        fig.set_figwidth(14)\n",
+    "        # loss\n",
+    "        loss = history.history['loss']\n",
+    "        val_loss = history.history['val_loss']\n",
+    "        # accuracy\n",
+    "        accuracy = history.history['accuracy']\n",
+    "        val_accuracy = history.history['val_accuracy']\n",
+    "        epoch = np.arange(150)\n",
+    "        # loss curve\n",
+    "        axis[0].plot(loss,label='Train')\n",
+    "        axis[0].plot(val_loss,label='Validation')\n",
+    "        axis[0].set_xlabel('epoch')\n",
+    "        axis[0].set_ylabel('loss')\n",
+    "        axis[0].set_title(title_loss)\n",
+    "        axis[0].legend()\n",
+    "        # accuracy curve\n",
+    "        axis[1].plot(accuracy, label='Train')\n",
+    "        axis[1].plot(val_accuracy, label='Validation')\n",
+    "        axis[1].set_xlabel('epoch')\n",
+    "        axis[1].set_ylabel('accuracy')\n",
+    "        axis[1].set_title(title_accuracy)\n",
+    "        axis[1].legend()\n",
+    "    \n",
+    "    # Evaluation Utilities\n",
+    "    def k_fold_cross_validation(self, X, y, k, batch_size=256, compiled_model = None):\n",
+    "        '''\n",
+    "        This function evaluates the model by performing k fold cross validation\n",
+    "        '''\n",
+    "        # instantiate k_fold \n",
+    "        k_fold = StratifiedKFold(k, shuffle=True, random_state=42)\n",
+    "        # output lists that will hold accuracy and loss for both train and validation\n",
+    "        # for each fold\n",
+    "        history_list = []\n",
+    "        accuracy_list = []\n",
+    "        val_accuracy_list = []\n",
+    "        val_loss_list = []\n",
+    "        loss_list = []\n",
+    "        # loop through the 5 folds\n",
+    "        for train_idx , val_idx in k_fold.split(X,y):\n",
+    "            # determine from the train data which fold will be used for validation, and the other will be for training\n",
+    "            X_train , y_train = X[train_idx], y[train_idx]\n",
+    "            X_val , y_val = X[val_idx], y[val_idx]\n",
+    "            # encode the labels\n",
+    "            y_train , y_val = pd.get_dummies(y_train) , pd.get_dummies(y_val)\n",
+    "            if compiled_model is None:\n",
+    "                model = self.model\n",
+    "            else:\n",
+    "                model = compiled_model\n",
+    "            # training...\n",
+    "            history = model.fit(x= X_train, y= y_train, epochs=25,  batch_size= batch_size, validation_data= (X_val, y_val), verbose= 0)\n",
+    "            # accuracy and loss after the completion of training\n",
+    "            accuracy = history.history['accuracy']\n",
+    "            val_accuracy = history.history['val_accuracy']\n",
+    "            loss = history.history['loss']\n",
+    "            val_loss = history.history['val_loss']\n",
+    "            history_list.append(history)\n",
+    "            accuracy_list.append(accuracy)\n",
+    "            loss_list.append(loss)\n",
+    "            val_accuracy_list.append(val_accuracy)\n",
+    "            val_loss_list.append(val_loss)\n",
+    "        # get the mean of results for all folds\n",
+    "        mean_accuracy = np.mean(accuracy_list)\n",
+    "        mean_val_accuracy = np.mean(val_accuracy_list)\n",
+    "        mean_loss = np.mean(loss_list)\n",
+    "        mean_val_loss = np.mean(val_loss_list)\n",
+    "        return history_list, mean_accuracy, mean_val_accuracy, mean_loss,  mean_val_loss\n",
+    "    \n",
+    "    def cross_validation_report(self, history_list, mean_accuracy, mean_val_accuracy, mean_loss,  mean_val_loss, k, title):\n",
+    "        print('The mean accuracy of the model after', k, 'fold cross validation is:', mean_accuracy)\n",
+    "        print('The mean validation accuracy of the model after', k, 'fold cross validation is:', mean_val_accuracy)\n",
+    "        print('The mean loss of the model after', k, 'fold cross validation is:', mean_loss)\n",
+    "        print('The mean validation loss of the model after', k, 'fold cross validation is:', mean_val_loss)\n",
+    "        for i, history in enumerate(history_list,start=1):\n",
+    "            self.train_curves(history, 'of fold-' + str(i) + title)"
+   ]
   }
  ],
  "metadata": {
