add vgg19 and inceptionv3 to models notebook

--- a/Notebooks/Models.ipynb
+++ b/Notebooks/Models.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.layers import Conv2D\n",
@@ -22,9 +23,7 @@
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
-    "from tensorflow.keras.applications.vgg19 import VGG19\n",
-    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from tensorflow.keras.optimizers import RMSprop , SGD"
+    "from tensorflow.keras.applications.vgg19 import VGG19"
    ]
   },
   {
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +63,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class vgg19:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def create_model(self, include_top, weights, input_shape):\n",
+    "        '''\n",
+    "        This function instantiate the vgg19 architecture and adding a 3 dense layers to be modified\n",
+    "        for the fashion_mnist dataset.\n",
+    "        '''\n",
+    "        vgg19 = VGG19(include_top=include_top, weights=weights, input_shape=input_shape)\n",
+    "        for layer in  vgg19.layers:\n",
+    "          layer.trainable = False\n",
+    "        # define architecture\n",
+    "        model = Sequential([\n",
+    "            Input(shape=(32,32,3)),\n",
+    "            vgg19,\n",
+    "            Flatten(),\n",
+    "            Dense(units= 256, activation= 'relu'),\n",
+    "            Dense(units= 128, activation= 'relu'),\n",
+    "            Dense(units= 10, activation= 'softmax')\n",
+    "          ])\n",
+    "        # compile the model\n",
+    "        model.compile(optimizer=Adam(), loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
+    "        return model\n",
+    "    \n",
+    "    def transform_data(self, X_train, X_test):\n",
+    "      '''\n",
+    "      This Function modifies the train and test data to be with 3 channels instead of 1,\n",
+    "      also pad the images with zeros to reach the required shape of VGG19.\n",
+    "      '''\n",
+    "      # number of examples in train and test data\n",
+    "      train_examples = len(X_train)\n",
+    "      test_examples = len(X_test)\n",
+    "      if X_train.shape[3] == 1 and X_test.shape[3] == 1:\n",
+    "        # repeat the single channe 3 times\n",
+    "        X_train = np.repeat(X_train, 3, axis=3)\n",
+    "        X_test = np.repeat(X_test, 3, axis=3)\n",
+    "        # reshape train and test data\n",
+    "        temp_train = X_train\n",
+    "        temp_test = X_test\n",
+    "        X_train = np.zeros((train_examples,32,32,3))\n",
+    "        X_test = np.zeros((test_examples,32,32,3))\n",
+    "        X_train[:,2:30,2:30,:] = temp_train\n",
+    "        X_test[:,2:30,2:30,:] = temp_test\n",
+    "        del temp_train\n",
+    "        del temp_test\n",
+    "      else:\n",
+    "          # reshape train and test data\n",
+    "          temp_train = X_train\n",
+    "          temp_test = X_test\n",
+    "          X_train = np.zeros((train_examples,32,32,3))\n",
+    "          X_test = np.zeros((test_examples,32,32,3))\n",
+    "          X_train[:,2:30,2:30,:] = temp_train\n",
+    "          X_test[:,2:30,2:30,:] = temp_test\n",
+    "          del temp_train\n",
+    "          del temp_test\n",
+    "      return X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Inception_V3:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def create_model(self, include_top, weights, input_shape):\n",
+    "        '''\n",
+    "        This function instantiate the inception_v3 architecture and adding a 3 dense layers to be modified\n",
+    "        for the fashion_mnist dataset\n",
+    "        '''\n",
+    "        inception_v3 = InceptionV3(include_top=include_top, weights=weights, input_shape=input_shape)\n",
+    "        for layer in  inception_v3.layers:\n",
+    "            layer.trainable = False\n",
+    "        # define architecture\n",
+    "        model = Sequential([\n",
+    "            Input(shape=(76,76,3)),\n",
+    "            inception_v3,\n",
+    "            Flatten(),\n",
+    "            Dense(units= 256, activation= 'relu'),\n",
+    "            Dense(units= 128, activation= 'relu'),\n",
+    "            Dense(units= 10, activation= 'softmax')\n",
+    "        ])\n",
+    "        # compile the model\n",
+    "        model.compile(optimizer=Adam(), loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
+    "        return model\n",
+    "    \n",
+    "    def transform_data(self, X_train, X_test):\n",
+    "      '''\n",
+    "      This Function modifies the train and test data to be with 3 channels instead of 1,\n",
+    "      also pad the images with zeros to reach the required shape of InceptionV3\n",
+    "      '''\n",
+    "      # number of examples in train and test data\n",
+    "      train_examples = len(X_train)\n",
+    "      test_examples = len(X_test)\n",
+    "      if X_train.shape[3] == 1 and X_test.shape[3] == 1:\n",
+    "        # repeat the single channe 3 times\n",
+    "        X_train = np.repeat(X_train, 3, axis=3)\n",
+    "        X_test = np.repeat(X_test, 3, axis=3)\n",
+    "        # reshape train and test data\n",
+    "        temp_train = X_train\n",
+    "        temp_test = X_test\n",
+    "        X_train = np.zeros((train_examples,76,76,3))\n",
+    "        X_test = np.zeros((test_examples,76,76,3))\n",
+    "        X_train[:,24:52,24:52,:] = temp_train\n",
+    "        X_test[:,24:52,24:52,:] = temp_test\n",
+    "        del temp_train\n",
+    "        del temp_test\n",
+    "      else:\n",
+    "          # reshape train and test data\n",
+    "          temp_train = X_train\n",
+    "          temp_test = X_test\n",
+    "          X_train = np.zeros((train_examples,76,76,3))\n",
+    "          X_test = np.zeros((test_examples,76,76,3))\n",
+    "          X_train[:,24:52,24:52,:] = temp_train\n",
+    "          X_test[:,24:52,24:52,:] = temp_test\n",
+    "          del temp_train\n",
+    "          del temp_test\n",
+    "      return X_train, X_test"
+   ]
   }
  ],
  "metadata": {
