add some markdowns in models notebook

--- a/Notebooks/Models.ipynb
+++ b/Notebooks/Models.ipynb
@@ -62,6 +62,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VGG19"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -124,6 +131,13 @@
     "          del temp_train\n",
     "          del temp_test\n",
     "      return X_train, X_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### InceptionV3"
    ]
   },
   {
